--- a/index.html
+++ b/index.html
@@ -3,110 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quản lý tài khoản & Ghi chú clipboard (Firebase realtime)</title>
+  <title>Quản lý tài khoản & Clipboard (Realtime)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <style>
-    body {
-      font-family: sans-serif;
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 20px;
-      background: #f4f9ff;
-      border-radius: 10px;
-    }
-    h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 5px;
-    }
-    .stat {
-      font-weight: bold;
-      color: #003366;
-      margin: 10px 0;
-    }
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      font-family: monospace;
-    }
-    button {
-      margin: 5px 5px 15px 0;
-      padding: 8px 16px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .account-box {
-      background: #007bff;
-      color: white;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-    }
-    .field {
-      background: #f1f1f1;
-      padding: 8px;
-      margin: 6px 0;
-      border-radius: 6px;
-      color: black;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .field span {
-      font-family: monospace;
-      margin-right: 10px;
-    }
-    .controls {
-      text-align: center;
-      margin-top: 15px;
-      margin-bottom: 25px;
-    }
-    .controls button {
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-    }
-    .delete-btn {
-      background: red;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin: 15px auto;
-      display: block;
-    }
-    .stats-bar {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
+    body { font-family: sans-serif; max-width: 800px; margin: 30px auto; background: #f4f9ff; padding: 20px; border-radius: 12px; }
+    h2 { border-bottom: 2px solid #ccc; padding-bottom: 5px; margin-top: 30px; }
+    .stat, .controls { margin: 10px 0; font-weight: bold; }
+    .stats-bar { display: flex; justify-content: space-between; margin: 10px 0; }
+    .field, .account-box { margin: 8px 0; background: #fff; padding: 10px; border-radius: 6px; }
+    .field { display: flex; justify-content: space-between; align-items: center; background: #eef2f7; }
+    textarea { width: 100%; font-family: monospace; padding: 10px; margin-top: 10px; }
+    button { margin: 6px 5px 10px 0; padding: 6px 12px; cursor: pointer; }
+    .delete-btn { background: red; color: white; border: none; border-radius: 6px; }
+    input[type="file"] { margin: 8px 0; }
   </style>
 </head>
 <body>
-  <h2>📥 Tác vụ 1: Dán nội dung từ clipboard (ghi chú)</h2>
+  <h2>Tác vụ 1: Dán nội dung từ clipboard</h2>
   <div class="stat">Số dòng đã dán: <span id="clipboardCount">0</span></div>
-  <button onclick="pasteNote()">📋 Paste</button>
+  <button onclick="pasteNote()">📋 Dán</button>
   <button onclick="exportNotes()">📄 Xuất .txt</button>
   <ul id="noteList"></ul>
 
-  <h2>📥 Tác vụ 2: Nhập danh sách tài khoản để Copy</h2>
-  <div class="stat stats-bar">
-    <span>Tổng số tài khoản chưa sử dụng: <span id="accountTotal">0</span></span>
-    <span>Tổng số tài khoản đã sử dụng: <span id="accountCopied">0</span></span>
+  <h2>Tác vụ 2: Quản lý tài khoản</h2>
+  <div class="stats-bar">
+    <span>Chưa dùng: <span id="accountTotal">0</span></span>
+    <span>Đã dùng: <span id="accountCopied">0</span></span>
   </div>
   <div class="controls">
-    <button onclick="filterAccounts(false)">Tài khoản chưa sử dụng</button>
-    <button onclick="filterAccounts(true)">Tài khoản đã sử dụng</button>
+    <button onclick="filterAccounts(false)">Hiện tài khoản chưa dùng</button>
+    <button onclick="filterAccounts(true)">Hiện tài khoản đã dùng</button>
   </div>
-
-  <textarea id="accountInput" rows="6" placeholder="username pass mail passmail idApple idApplePass\nhoặc username:pass:mail:passmail:idApple:idApplePass"></textarea>
-  <br>
+  <textarea id="accountInput" placeholder="username pass mail passmail idApple idApplePass\nhoặc dùng : hoặc |"></textarea>
   <input type="file" id="fileInput" accept=".json">
-  <button onclick="parseAccounts()">📂 Nhập danh sách</button>
+  <input type="file" id="txtUpload" accept=".txt">
+  <button onclick="parseAccounts()">📂 Nhập từ textarea</button>
   <button onclick="copyAllAccounts()">📋 Copy tất cả</button>
   <button onclick="exportAccounts()">📄 Xuất .txt</button>
   <div id="accountList"></div>
@@ -121,11 +53,9 @@
       messagingSenderId: "615010120621",
       appId: "1:615010120621:web:3c55dcbf857d4e826f2724"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-    const accounts = {};
-    let filterCopied = null;
+    const accounts = {}; let filterCopied = null;
 
     function pasteNote() {
       navigator.clipboard.readText().then(text => {
@@ -133,159 +63,132 @@
         db.ref("clipboardNotes").push(text);
       });
     }
-
     function exportNotes() {
-      db.ref("clipboardNotes").once("value", snapshot => {
-        const content = Object.values(snapshot.val() || {}).join("\n");
+      db.ref("clipboardNotes").once("value", snap => {
+        const content = Object.values(snap.val() || {}).join("\n");
         const blob = new Blob([content], { type: "text/plain" });
         const a = document.createElement("a");
         a.href = URL.createObjectURL(blob);
-        a.download = "notes.txt";
-        a.click();
+        a.download = "notes.txt"; a.click();
       });
     }
-
-    db.ref("clipboardNotes").on("value", snapshot => {
-      const data = snapshot.val() || {};
+    db.ref("clipboardNotes").on("value", snap => {
+      const data = snap.val() || {};
       document.getElementById("clipboardCount").textContent = Object.keys(data).length;
-      const ul = document.getElementById("noteList");
-      ul.innerHTML = "";
-      Object.values(data).forEach(line => {
+      const list = document.getElementById("noteList");
+      list.innerHTML = "";
+      Object.values(data).forEach(text => {
         const li = document.createElement("li");
-        li.textContent = line;
-        ul.appendChild(li);
+        li.textContent = text;
+        list.appendChild(li);
       });
     });
 
     function updateStats() {
       const all = Object.values(accounts);
-      const total = all.filter(a => !a.copied).length;
-      const used = all.filter(a => a.copied).length;
-      document.getElementById("accountTotal").textContent = total;
-      document.getElementById("accountCopied").textContent = used;
+      document.getElementById("accountTotal").textContent = all.filter(a => !a.copied).length;
+      document.getElementById("accountCopied").textContent = all.filter(a => a.copied).length;
     }
-
+    function parseLine(line) {
+      const parts = line.includes(":") ? line.split(":") : line.includes("|") ? line.split("|") : line.split(/\s+/);
+      return parts;
+    }
     function parseAccounts() {
-      const input = document.getElementById("accountInput").value.trim().split("\n");
-      input.forEach(line => {
-        const parts = line.includes(":") ? line.split(":") : line.includes("|") ? line.split("|") : line.split(" ");
-        if (parts.length >= 4) {
-          db.ref("accounts").push({
-            username: parts[0],
-            password: parts[1],
-            email: parts[2],
-            emailPass: parts[3],
-            idApple: parts[4] || "",
-            idApplePass: parts[5] || "",
-            copied: false
-          });
-        }
+      const lines = document.getElementById("accountInput").value.trim().split("\n");
+      lines.forEach(line => {
+        const p = parseLine(line);
+        if (p.length >= 4) db.ref("accounts").push({
+          username: p[0], password: p[1], email: p[2], emailPass: p[3], idApple: p[4]||"", idApplePass: p[5]||"", copied: false
+        });
       });
     }
-
-    document.getElementById("fileInput").addEventListener("change", function(evt) {
-      const file = evt.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
+    document.getElementById("fileInput").addEventListener("change", function(e) {
+      const f = e.target.files[0];
+      if (!f) return;
+      const r = new FileReader();
+      r.onload = e => {
         try {
           const data = JSON.parse(e.target.result);
           data.forEach(acc => {
             if (acc.username && acc.password && acc.email && acc.emailPass) {
-              db.ref("accounts").push({
-                ...acc,
-                idApple: acc.idApple || "",
-                idApplePass: acc.idApplePass || "",
-                copied: false
-              });
+              db.ref("accounts").push({ ...acc, idApple: acc.idApple || "", idApplePass: acc.idApplePass || "", copied: false });
             }
           });
-        } catch (err) {
-          alert("File không đúng định dạng JSON!");
-        }
+        } catch (err) { alert("File không đúng định dạng JSON!"); }
       };
-      reader.readAsText(file);
+      r.readAsText(f);
     });
-
-    db.ref("accounts").on("value", snapshot => {
-      const data = snapshot.val() || {};
+    document.getElementById("txtUpload").addEventListener("change", function(e) {
+      const f = e.target.files[0];
+      if (!f) return;
+      const r = new FileReader();
+      r.onload = e => {
+        const lines = e.target.result.trim().split("\n");
+        lines.forEach(line => {
+          const p = parseLine(line);
+          if (p.length >= 4) db.ref("accounts").push({
+            username: p[0], password: p[1], email: p[2], emailPass: p[3], idApple: p[4]||"", idApplePass: p[5]||"", copied: false
+          });
+        });
+        alert("✅ Đã nhập từ TXT thành công!");
+      };
+      r.readAsText(f);
+    });
+    db.ref("accounts").on("value", snap => {
+      const data = snap.val() || {};
       Object.keys(accounts).forEach(k => delete accounts[k]);
       Object.assign(accounts, data);
-      updateStats();
-      renderAccounts();
+      updateStats(); renderAccounts();
     });
-
     function renderAccounts() {
-      const container = document.getElementById("accountList");
-      container.innerHTML = "";
+      const list = document.getElementById("accountList");
+      list.innerHTML = "";
       Object.entries(accounts).forEach(([id, acc]) => {
         if (filterCopied !== null && acc.copied !== filterCopied) return;
         const box = document.createElement("div");
         box.className = "account-box";
-
         [
           { label: "Tên đăng nhập", value: acc.username },
           { label: "Mật khẩu", value: acc.password },
           { label: "Email", value: acc.email },
           { label: "Mật khẩu Email", value: acc.emailPass },
           { label: "ID Apple", value: acc.idApple },
-          { label: "Mật khẩu ID Apple", value: acc.idApplePass },
+          { label: "Mật khẩu ID Apple", value: acc.idApplePass }
         ].forEach(field => {
           const row = document.createElement("div");
           row.className = "field";
-
           const label = document.createElement("span");
           label.textContent = field.label;
-          label.style.fontWeight = "bold";
-          label.style.flex = "1";
-
           const valueSpan = document.createElement("span");
           valueSpan.textContent = field.value;
-          valueSpan.style.flex = "2";
-
-          const copyBtn = document.createElement("button");
-          copyBtn.textContent = "Copy";
-          copyBtn.onclick = () => {
-            navigator.clipboard.writeText(field.value).then(() => {
-              db.ref(`accounts/${id}/copied`).set(true);
-            });
+          const btn = document.createElement("button");
+          btn.textContent = "Copy";
+          btn.onclick = () => {
+            navigator.clipboard.writeText(field.value);
+            db.ref(`accounts/${id}/copied`).set(true);
           };
-
-          row.appendChild(label);
-          row.appendChild(valueSpan);
-          row.appendChild(copyBtn);
+          row.append(label, valueSpan, btn);
           box.appendChild(row);
         });
-
-        const deleteBtn = document.createElement("button");
-        deleteBtn.className = "delete-btn";
-        deleteBtn.textContent = "Xóa tài khoản";
-        deleteBtn.onclick = () => {
-          db.ref(`accounts/${id}`).remove();
-        };
-        box.appendChild(deleteBtn);
-
-        container.appendChild(box);
+        const delBtn = document.createElement("button");
+        delBtn.className = "delete-btn";
+        delBtn.textContent = "Xoá tài khoản";
+        delBtn.onclick = () => db.ref(`accounts/${id}`).remove();
+        box.appendChild(delBtn);
+        list.appendChild(box);
       });
     }
-
     function filterAccounts(val) {
       filterCopied = val;
       renderAccounts();
     }
-
     function copyAllAccounts() {
-      const content = Object.values(accounts)
-        .map(acc => `${acc.username}:${acc.password}:${acc.email}:${acc.emailPass}:${acc.idApple}:${acc.idApplePass}`)
-        .join("\n");
-      navigator.clipboard.writeText(content).then(() => alert("Đã copy tất cả!"));
+      const c = Object.values(accounts).map(acc => `${acc.username}:${acc.password}:${acc.email}:${acc.emailPass}:${acc.idApple}:${acc.idApplePass}`).join("\n");
+      navigator.clipboard.writeText(c).then(() => alert("Đã copy tất cả!"));
     }
-
     function exportAccounts() {
-      const content = Object.values(accounts)
-        .map(acc => `${acc.username}:${acc.password}:${acc.email}:${acc.emailPass}:${acc.idApple}:${acc.idApplePass}`)
-        .join("\n");
-      const blob = new Blob([content], { type: "text/plain" });
+      const c = Object.values(accounts).map(acc => `${acc.username}:${acc.password}:${acc.email}:${acc.emailPass}:${acc.idApple}:${acc.idApplePass}`).join("\n");
+      const blob = new Blob([c], { type: "text/plain" });
       const url = URL.createObjectURL(blob);
       const a = document.createElement("a");
       a.href = url;
